Spacing adjustments and gif bump fix

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -432,8 +432,6 @@ hr {
 .desktop-invitation-content {
   width: 50%;
   margin: 0 auto;
-  padding-top: 3rem;
-  padding-bottom: 4rem;
 }
 
 .mobile-invitation-content {
